--- a/style.css
+++ b/style.css
@@ -415,17 +415,14 @@ body {
   border-radius: var(--border-radius);
   box-shadow: 0 0 30px rgba(0,0,0,0.8);
 }
-
-.modal-video-content iframe, 
-.modal-video-content video {
+.modal-video-content iframe {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  border: none;
-  min-height: auto;
 }
+
 
 /* État de chargement vidéo */
 .video-loading {
