--- a/style.css
+++ b/style.css
@@ -694,3 +694,21 @@ a:focus {
     font-size: 0.8em !important;
   }
 }
+
+@media (max-width: 768px) {
+  .video-responsive-container {
+    width: 100vw;       /* largeur totale de l'écran */
+    height: 100vh;      /* hauteur totale de l'écran */
+    padding: 0;         /* enlever le padding-bottom */
+    border-radius: 0;   /* coins arrondis supprimés */
+    box-shadow: none;   /* si tu veux, enlever l'ombre */
+  }
+
+  .video-responsive-container iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+}
